--- a/index.html
+++ b/index.html
@@ -299,45 +299,72 @@
                 <form id="contact-form">
                 <div class="row">
                     <div class="col-md-6">
-                        <div class="form-group">
-                            <label for="name">
-                                Name</label> <input type="text" class="form-control" id="name" placeholder="Enter name" required="required" />
-                        </div>
-                        <div class="form-group">
-                            <label for="email">
-                                Email Address</label>
-                            <div class="input-group">
-                                <span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span>
-                                </span>
-                                <input type="email" class="form-control" id="email" placeholder="Enter email" required="required" /></div>
-                        </div>
-                        <div class="form-group">
-                            <label for="subject">
-                                Subject</label>
-                            <select id="subject" name="subject" class="form-control" required="required">
-                                <option value="na" selected="">Choose One:</option>
-                                <option value="service">General Customer Service</option>
-                                <option value="suggestions">Suggestions</option>
-                                <option value="product">Product Support</option>
-                            </select>
-                        </div>
+                       <form name="contactform" method="post" action="send_form_email.php">
+<table width="450px">
+<tr>
+ <td valign="top">
+  <label for="first_name">First Name *</label>
+ </td>
+ <td valign="top">
+  <input  type="text" name="first_name" maxlength="50" size="30">
+ </td>
+</tr>
+<tr>
+ <td valign="top"">
+  <label for="last_name">Last Name *</label>
+ </td>
+ <td valign="top">
+  <input  type="text" name="last_name" maxlength="50" size="30">
+ </td>
+</tr>
+<tr>
+ <td valign="top">
+  <label for="email">Email Address *</label>
+ </td>
+ <td valign="top">
+  <input  type="text" name="email" maxlength="80" size="30">
+ </td>
+</tr>
+<tr>
+ <td valign="top">
+  <label for="telephone">Telephone Number</label>
+ </td>
+ <td valign="top">
+  <input  type="text" name="telephone" maxlength="30" size="30">
+ </td>
+</tr>
+<tr>
+ <td valign="top">
+  <label for="comments">Comments *</label>
+ </td>
+ <td valign="top">
+  <textarea  name="comments" maxlength="1000" cols="25" rows="6"></textarea>
+ </td>
+</tr>
+<tr>
+ <td colspan="2" style="text-align:center">
+  <button type="submit" class="btn btn-skin pull-right" id="btnContactUs" >
+                            Send Message</button>  
+                            <!--	// place of form -->
+                             <a href="file:///E:/PROJECTS/WEB/Virtual University/send_form_email.php">Email Form</a>
+ </td>
+</tr>
+</table>
+</form>
                     </div>
+
                     <div class="col-md-6">
                         <div class="form-group">
-                            <label for="name">
-                                Message</label>
-                            <textarea name="message" id="message" class="form-control" rows="9" cols="25" required="required"
-                                placeholder="Message"></textarea>
+                           <img src="img/no.png">
+                         <!--   <textarea name="message" id="message" class="form-control" rows="9" cols="25" required="required" placeholder="Message"></textarea>
+                         -->
                         </div>
                     </div>
-                    <div class="col-md-12">
-                        <button type="submit" class="btn btn-skin pull-right" id="btnContactUs">
-                            Send Message</button>
-                    </div>
+                    
                 </div>
                 </form>
-            </div>
-        </div>
+             </div>
+         </div>
 		
 		<div class="col-lg-4">
 			<div class="widget-contact">
@@ -356,10 +383,11 @@
 				<address>
 				  <strong>We're on social networks</strong><br>
                        	<ul class="company-social">
-                            <li class="social-facebook"><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                            <li class="social-twitter"><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                            <li class="social-dribble"><a href="#" target="_blank"><i class="fa fa-dribbble"></i></a></li>
-                            <li class="social-google"><a href="#" target="_blank"><i class="fa fa-google-plus"></i></a></li>
+                           <li class="social-facebook"><a href="https://www.facebook.com/ebrahim.aboseif" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                           <li class="social-twitter"><a href="https://twitter.com/HemaAboseif" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                           <li class="social-linkedin"> <a href="https://www.linkedin.com/in/ebrahim-aboseif/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                           </li>
+                            <li class="social-google"><a href="https://plus.google.com/u/0/118134577793426375682" target="_blank"><i class="fa fa-google-plus"></i></a></li>
                         </ul>	
 				</address>					
 			
