added links and form html and php2

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                 <form id="contact-form">
                 <div class="row">
                     <div class="col-md-6">
-                       <form name="contactform" method="post" action="send_form_email.php">
+                       <form name="contactform" method="post" action="php/send_form_email.php">
 <table width="450px">
 <tr>
  <td valign="top">
@@ -346,7 +346,7 @@
   <button type="submit" class="btn btn-skin pull-right" id="btnContactUs" >
                             Send Message</button>  
                             <!--	// place of form -->
-                             <a href="file:///E:/PROJECTS/WEB/Virtual University/send_form_email.php">Email Form</a>
+                             <a href="file:///E:/PROJECTS/WEB/Virtual University/php/send_form_email.php">Email Form</a>
  </td>
 </tr>
 </table>
